--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.421.0",
     "@aws-sdk/lib-storage": "^3.421.0",
+    "aws-sdk": "^2.1467.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
